# configcalc

./: .gitignore  404.html  LICENSE  README.md  REQUIREMENTS  REQUIREMENTS.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  python-publish.yml
config_reading/: index.html
docs/: config_reading.md  index.md  parsers.md  perform_calculations.md  utils.md
parsers/: index.html
perform_calculations/: index.html
scripts/: config_fusion.ipynb  test.ipynb
search/: search_index.json
src/configcalc/: __about__.py  __init__.py  config_merge.py  constants.py  dict_ops.py  merge_cfgs.py  parsers.py  perform_calcs.py  read_cfg_file.py  typing.py  utils.py
tests/: __init__.py  test_merge_cfg_file.py  test_perform_calculations.py  test_read_cfg_file.py
tests/assets/: test.toml  test_second.toml  test_third.toml
utils/: index.html
