[project]
name = "configcalc"
version = "0.1.2"
description = "The purpose is to offer config files functionality with calculations that can be specified"
readme = "README.md"
authors = [
    { name = "Raphael Proux", email = "raphaelproux@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyparsing>=3.2.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.5",
    "mkdocstrings-python>=1.16.2",
    "pytest>=8.3.4",
]
